Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8978

[C++][Compute] "Conditional jump or move depends on uninitialised value(s)" Valgrind warning

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • C++

    Description

      https://github.com/ursa-labs/crossbow/runs/715700830#step:6:4277

      [ RUN      ] TestCallScalarFunction.PreallocationCases
      ==5357== Conditional jump or move depends on uninitialised value(s)
      ==5357==    at 0x51D69A6: void arrow::internal::TransferBitmap<false, true>(unsigned char const*, long, long, long, unsigned char*) (bit_util.cc:176)
      ==5357==    by 0x51CE866: arrow::internal::CopyBitmap(unsigned char const*, long, long, unsigned char*, long, bool) (bit_util.cc:208)
      ==5357==    by 0x52B6325: arrow::compute::detail::NullPropagator::PropagateSingle() (exec.cc:295)
      ==5357==    by 0x52B36D1: Execute (exec.cc:378)
      ==5357==    by 0x52B36D1: arrow::compute::detail::PropagateNulls(arrow::compute::KernelContext*, arrow::compute::ExecBatch const&, arrow::ArrayData*) (exec.cc:412)
      ==5357==    by 0x52BA7F3: ExecuteBatch (exec.cc:586)
      ==5357==    by 0x52BA7F3: arrow::compute::detail::ScalarExecutor::Execute(std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::compute::detail::ExecListener*) (exec.cc:542)
      ==5357==    by 0x52BC21F: arrow::compute::Function::Execute(std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::compute::FunctionOptions const*, arrow::compute::ExecContext*) const (function.cc:94)
      ==5357==    by 0x52B141C: arrow::compute::CallFunction(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::compute::FunctionOptions const*, arrow::compute::ExecContext*) (exec.cc:937)
      ==5357==    by 0x52B16F2: arrow::compute::CallFunction(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::compute::ExecContext*) (exec.cc:942)
      ==5357==    by 0x155515: arrow::compute::detail::TestCallScalarFunction_PreallocationCases_Test::TestBody()::{lambda(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >)#1}::operator()(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >) const (exec_test.cc:756)
      ==5357==    by 0x156AF2: arrow::compute::detail::TestCallScalarFunction_PreallocationCases_Test::TestBody() (exec_test.cc:786)
      ==5357==    by 0x5BE4862: void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==5357==    by 0x5BDEDE2: void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==5357== 
      

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              kou Kouhei Sutou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m