ARROW-8978: [C++][CI] Fix valgrind warnings in cpp-conda-valgrind nightly build

There are benign warnings in the cpp-conda-valgrind build due to accessing uninitialized trailing bits in validity bitmaps. Fixing the warnings without relying on compiler definitions is more complex than it seems (assuming you don't want to always memset the bitmap to all 0).

Closes #7302 from wesm/ARROW-8978

Lead-authored-by: Wes McKinney <wesm+git@apache.org>
Co-authored-by: Sutou Kouhei <kou@clear-code.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>